objects/HealthcarePlanRate__c.object
<CustomObject>
    <fields>
        <fullName>EC__c</fullName>
        <label>EC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EOAmount__c</fullName>
        <label>EO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ES__c</fullName>
        <label>ES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enroll__c</fullName>
        <label>Enroll</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F__c</fullName>
        <label>F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanYear__c</fullName>
        <label>Plan Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductIDTEXT__c</fullName>
        <label>Product ID TEXT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Healthcare Plans/Rates</relationshipLabel>
        <relationshipName>Healthcare_Plans_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S__c</fullName>
        <label>S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tier</valueSetName>
        </valueSet>
    </fields>
    <label>Healthcare Plan/Rate</label>
    <nameField>
        <displayFormat>HPR-{000000000}</displayFormat>
        <label>Healthcare Plan/Rate Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Healthcare Plans/Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PlanYear__c</columns>
        <columns>Product__c</columns>
        <columns>Tier__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>S__c</columns>
        <columns>EC__c</columns>
        <columns>ES__c</columns>
        <columns>F__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Chiro</fullName>
        <columns>NAME</columns>
        <columns>PlanYear__c</columns>
        <columns>Product__c</columns>
        <columns>Tier__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>S__c</columns>
        <columns>EC__c</columns>
        <columns>ES__c</columns>
        <columns>F__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Chiro</value>
        </filters>
        <label>_Chiro</label>
    </listViews>
    <listViews>
        <fullName>Dental</fullName>
        <columns>NAME</columns>
        <columns>PlanYear__c</columns>
        <columns>Product__c</columns>
        <columns>Tier__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>S__c</columns>
        <columns>EC__c</columns>
        <columns>ES__c</columns>
        <columns>F__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </filters>
        <label>_Dental</label>
    </listViews>
    <listViews>
        <fullName>Drug_Vision</fullName>
        <columns>NAME</columns>
        <columns>PlanYear__c</columns>
        <columns>Product__c</columns>
        <columns>Tier__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>S__c</columns>
        <columns>EC__c</columns>
        <columns>ES__c</columns>
        <columns>F__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Drug/Vision</value>
        </filters>
        <label>_Drug/Vision</label>
    </listViews>
    <listViews>
        <fullName>HMAA</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Tier__c</columns>
        <columns>Rate__c</columns>
        <columns>PlanYear__c</columns>
        <columns>EOAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>startsWith</operation>
            <value>HMAA</value>
        </filters>
        <label>HMAA</label>
    </listViews>
    <listViews>
        <fullName>HMSA</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Tier__c</columns>
        <columns>Enroll__c</columns>
        <columns>Rate__c</columns>
        <columns>PlanYear__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>startsWith</operation>
            <value>HMSA</value>
        </filters>
        <label>HMSA</label>
    </listViews>
    <listViews>
        <fullName>Healthcare</fullName>
        <columns>NAME</columns>
        <columns>PlanYear__c</columns>
        <columns>Product__c</columns>
        <columns>Tier__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>S__c</columns>
        <columns>EC__c</columns>
        <columns>ES__c</columns>
        <columns>F__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductFamily__c</field>
            <operation>equals</operation>
            <value>Healthcare</value>
        </filters>
        <label>_Healthcare</label>
    </listViews>
    <listViews>
        <fullName>Kaiser</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Tier__c</columns>
        <columns>Rate__c</columns>
        <columns>PlanYear__c</columns>
        <columns>S__c</columns>
        <columns>EC__c</columns>
        <columns>ES__c</columns>
        <columns>F__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>startsWith</operation>
            <value>Kaiser</value>
        </filters>
        <label>Kaiser</label>
    </listViews>
</CustomObject>